update 2 lesson HW